# lets-write-sync-primitives

./: .gitignore  COPYING  README.md  meson.build
src/: barrier.cpp  barrier.h  condvar.cpp  condvar.h  event.cpp  event.h  futex.h  meson.build  mutex.cpp  mutex.h  once.cpp  once.h  rwlock.cpp  rwlock.h  semaphore.cpp  semaphore.h  spinlock.cpp  spinlock.h  util.h
tests/: meson.build  test-barrier.cpp  test-event.cpp  test-mutex.cpp  test-once.cpp  test-rwlock.cpp  test-semaphore.cpp  test-spinlock.cpp
